fixed padding on mobiles

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,8 +25,11 @@ body {
 } */
 
 .content {
+	display: flex;
+	flex-direction: column;
 	min-height: calc(100vh - 50px); /* 50px - header's height  */
 	max-height: calc(100vh - 50px); /* 50px - header's height  */
+	height: calc(100vh - 50px);
 	overflow-x: hidden;
 	overflow-y: auto;
 }
